# speck

./: .gitignore  .spec-tui.toml.example  .speck.toml.example  CLAUDE.md  Cargo.toml  README.md  clippy.toml  default_config.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
specs/001-spec-tui-worktree/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-spec-tui-worktree/checklists/: requirements.md
specs/001-spec-tui-worktree/contracts/: git-service.md  mcp-client.md  spec-service.md
specs/002-cicd-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cicd-pipeline/checklists/: requirements.md
specs/002-cicd-pipeline/contracts/: ci-workflow.md  release-workflow.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/domain/: mod.rs  project.rs  spec.rs  workflow.rs  worktree.rs
src/services/: git.rs  mcp.rs  mod.rs  process.rs  spec.rs
src/ui/: input.rs  layout.rs  mod.rs
src/ui/widgets/: editor.rs  help.rs  mod.rs  output_panel.rs  spec_detail.rs  spec_list.rs  text_input.rs  worktree_list.rs
