[package]
name = "speck"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for spec-driven development workflow with git worktree integration"
authors = ["speck contributors"]
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Git Operations (using git CLI via std::process::Command)

# MCP Client (JSON-RPC 2.0)
jsonrpc-core = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
directories = "5.0"

# Text Editing
tui-textarea = "0.7"

# Markdown & Syntax Highlighting
pulldown-cmark = "0.9"
syntect = "5.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for spec ID parsing
regex = "1.10"

[dev-dependencies]
# Testing
insta = "1.34"
tempfile = "3.10"
tokio-test = "0.4"

[[bin]]
name = "speck"
path = "src/main.rs"
